syntax = "proto3";


import "google/protobuf/wrappers.proto";
import "google/protobuf/empty.proto";

option csharp_namespace = "CodeDesignPlus.Net.gRpc.Clients.Services.Payment";

package Payment;



service Payment {
  rpc InitiatePayment (InitiatePaymentRequest) returns (google.protobuf.Empty);
}

message InitiatePaymentRequest {
  string id = 1;
  string module = 2;
  Amount subTotal = 3;
  Amount tax = 4;
  Amount total = 5;
  string description = 6;
  Payer payer = 7;
  PaymentMethod paymentMethod = 8;
  PaymentProvider provider = 9;
}

enum PaymentProvider {
  None = 0;
  Payu = 1;
  MercadoPago = 2;
}

message PaymentMethod {
  string type = 1;
  optional CreditCard creditCard = 2;
  optional Pse pse = 3;
}

message Payer {
  string emailAddress = 1;
  string fullName = 2;
  optional Address billingAddress = 3;
  string dniNumber = 4;
  string contactPhone = 5;
  string dniType = 6;
}

message Address {
  string street = 1;
  string country = 2;
  string state = 3;
  string city = 4;
  string postalCode = 5;
  string phone = 6;
}

message CreditCard {
  string number = 1;
  string securityCode = 2;
  string expirationDate = 3;
  string name = 4;
  int32 installmentsNumber = 5;
}

message Pse {
  string pseCode = 1;
  string typePerson = 2;
  string pseResponseUrl = 3;
}

message Amount {
  int64 value = 1;
  google.protobuf.StringValue currency = 2;
}